[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logop"
version = "0.4.0"
authors = [
  { name="numLinka", email="" },
]
description = "A simple log module"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/numlinka/pylogop"
"Bug Tracker" = "https://github.com/numlinka/pylogop/issues"