[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logop"
version = "1.0.3"
authors = [
  { name="numLinka", email="numlinka@163.com" },
]
description = "A simple log module"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/numlinka/pylogop"
"Bug Tracker" = "https://github.com/numlinka/pylogop/issues"